--- a/app/src/main/res/layout/activity_libro_list.xml
+++ b/app/src/main/res/layout/activity_libro_list.xml
@@ -5,16 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.ProductoListActivity">
+    tools:context=".ui.activities.LibroDetailActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:paddingTop="30dp"
-        android:id="@+id/lstProductos"
+        android:id="@+id/lstPersonas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
